--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -13,3 +13,17 @@
 	pages = {168--182},
 	file = {Friedl et al_2010_MODIS Collection 5 global land cover.pdf:/home/khufkens/Dropbox/Research_Files/zotero_library/Friedl et al_2010_MODIS Collection 5 global land cover.pdf:application/pdf},
 }
+@article{Fritz2017,
+   abstract = {Global land cover is an essential climate variable and a key biophysical driver for earth system models. While remote sensing technology, particularly satellites, have played a key role in providing land cover datasets, large discrepancies have been noted among the available products. Global land use is typically more difficult to map and in many cases cannot be remotely sensed. In-situ or ground-based data and high resolution imagery are thus an important requirement for producing accurate land cover and land use datasets and this is precisely what is lacking. Here we describe the global land cover and land use reference data derived from the Geo-Wiki crowdsourcing platform via four campaigns. These global datasets provide information on human impact, land cover disagreement, wilderness and land cover and land use. Hence, they are relevant for the scientific community that requires reference data for global satellite-derived products, as well as those interested in monitoring global terrestrial ecosystems in general.},
+   author = {Steffen Fritz and Linda See and Christoph Perger and Ian McCallum and Christian Schill and Dmitry Schepaschenko and Martina Duerauer and Mathias Karner and Christopher Dresel and Juan Carlos Laso-Bayas and Myroslava Lesiv and Inian Moorthy and Carl F. Salk and Olha Danylo and Tobias Sturn and Franziska Albrecht and Liangzhi You and Florian Kraxner and Michael Obersteiner},
+   doi = {10.1038/sdata.2017.75},
+   issn = {20524463},
+   journal = {Scientific Data},
+   month = {6},
+   pmid = {28608851},
+   publisher = {Nature Publishing Groups},
+   title = {A global dataset of crowdsourced land cover and land use reference data},
+   volume = {4},
+   year = {2017},
+}
+
