--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -26,4 +26,14 @@
    volume = {4},
    year = {2017},
 }
+@dataset{hufkens_2023_8298491,
+  author       = {Hufkens, Koen},
+  title        = {Handful of Pixels - machine learning data},
+  month        = aug,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {v1.1},
+  doi          = {10.5281/zenodo.8298491},
+  url          = {https://doi.org/10.5281/zenodo.8298491}
+}
 
